--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,6 +14,9 @@
           <a [routerLink]="['/about']" class="btn btn-main nav__link"
             >Lets get started →</a
           >
+          <div class="hero-inner-img">
+            <img src="../../../assets/images/home-banner-icon.svg" alt="icon" />
+          </div>
         </div>
       </div>
       <div class="col-md-6">
@@ -96,7 +99,7 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read More →</a
+                          >Read more →</a
                         >
                       </div>
                     </div>
@@ -128,7 +131,7 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read More →</a
+                          >Read more →</a
                         >
                       </div>
                     </div>
@@ -160,7 +163,7 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read More →</a
+                          >Read more →</a
                         >
                       </div>
                     </div>
@@ -192,7 +195,7 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read More →</a
+                          >Read more →</a
                         >
                       </div>
                     </div>
@@ -217,7 +220,7 @@
   />
   <div class="container">
     <div class="row">
-      <div class="col-md-5 col-lg-5">
+      <div class="col-md-5 col-lg-6">
         <div class="we-offer-inner">
           <h5><small>WE OFFERS</small></h5>
           <h2>
@@ -231,7 +234,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-7 col-lg-6 ml-auto">
+      <div class="col-md-7 col-lg-6">
         <div class="we-offer-inner1">
           <ul>
             <li>
