feat: add icon in about page

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -39,8 +39,8 @@
             <li>
               <div class="icons">
                 <img
-                  src="../../assets/images/icon1.svg"
-                  class="img-fluid"
+                  src="../../assets/images/about-icon-1.svg"
+                  class=""
                   alt=""
                 />
               </div>
@@ -53,11 +53,7 @@
             </li>
             <li>
               <div class="icons">
-                <img
-                  src="../../assets/images/icon1.svg"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="../../assets/images/icon1.svg" class="" alt="" />
               </div>
               <div class="content">
                 <h2>
@@ -68,11 +64,7 @@
             </li>
             <li>
               <div class="icons">
-                <img
-                  src="../../assets/images/icon1.svg"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="../../assets/images/icon1.svg" class="" alt="" />
               </div>
               <div class="content">
                 <h2>
@@ -82,7 +74,9 @@
               </div>
             </li>
           </ul>
-          <a [routerLink]="['/contact']" class="btn btn-main">Contact us →</a>
+          <a [routerLink]="['/contact']" class="btn btn-main"
+            >Contact us <img src="../../../assets/images/arrow.svg" alt="icon"
+          /></a>
         </div>
       </div>
     </div>
@@ -196,8 +190,9 @@
             join our team
           </h2>
           <a [routerLink]="['/careers']" class="btn-white-border"
-            >See openings →</a
-          >
+            >See openings
+            <img src="../../../assets/images/arrow.svg" alt="icon"
+          /></a>
         </div>
       </div>
     </div>
