--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,8 +12,8 @@
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
           <a [routerLink]="['/about']" class="btn btn-main nav__link"
-            >Lets get started →</a
-          >
+            >Lets get started <img src="../../../assets/images/arrow.svg"
+          /></a>
           <div class="hero-inner-img">
             <img src="../../../assets/images/home-banner-icon.svg" alt="icon" />
           </div>
@@ -99,8 +99,11 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read more →</a
-                        >
+                          >Read more
+                          <img
+                            class="slider-icon"
+                            src="../../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -131,8 +134,11 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read more →</a
-                        >
+                          >Read more
+                          <img
+                            class="slider-icon"
+                            src="../../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -163,8 +169,11 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read more →</a
-                        >
+                          >Read more
+                          <img
+                            class="slider-icon"
+                            src="../../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -195,8 +204,11 @@
                           laborum fuga voluptas?
                         </p>
                         <a href="javascript:void(0)" class="btn btn-border"
-                          >Read more →</a
-                        >
+                          >Read more
+                          <img
+                            class="slider-icon"
+                            src="../../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -520,8 +532,8 @@
         <div class="lts-inner">
           <h2>Lets start your project now</h2>
           <a [routerLink]="['/contact']" class="btn-white-border"
-            >Contact us now →</a
-          >
+            >Contact us now <img src="../../../assets/images/arrow.svg"
+          /></a>
         </div>
       </div>
     </div>
