--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -138,6 +138,9 @@
       }
     }
   }
+  .slider-icon {
+    width: auto;
+  }
   span.img-bg-1 img:first-child {
     position: absolute;
     top: 100px;
