--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" [ngClass]="isHomePage ? 'whiteheader' : 'blueheader'">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6">
@@ -20,7 +20,7 @@
       <div class="col-md-6">
         <div class="d-flex justify-content-end align-items-center side-menu">
           <div class="main-menu" *ngIf="showmenu">
-            <ul>
+            <ul [ngClass]="isHomePage ? 'blackmenu' : 'whitemenu'">
               <li>
                 <a [routerLink]="['/home']" routerLinkActive="active">Home</a>
               </li>
