--- a/src/app/pages/services/website/website.component.html
+++ b/src/app/pages/services/website/website.component.html
@@ -102,7 +102,9 @@
               </div>
             </li>
           </ul>
-          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+          <a [routerLink]="['/contact']" class="btn btn-main"
+            >Get a quote <img src="../../../assets/images/arrow.svg"
+          /></a>
         </div>
       </div>
     </div>
@@ -127,7 +129,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/website-benefit-1.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -143,7 +145,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/website-benefit-2.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -159,7 +161,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/website-benefit-3.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -175,7 +177,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/website-benefit-4.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -191,7 +193,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/website-benefit-5.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -207,7 +209,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/website-benefit-6.svg"
                   class="img-fluid"
                   alt=""
                 />
