--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -142,7 +142,7 @@
                   class="spinner-border spinner-border-sm mr-1"
                   *ngIf="applicationForm.valid"
                 ></span> -->
-                Submit →
+                Submit <img src="../../../assets/images/arrow.svg" />
               </button>
             </div>
           </form>
