--- a/src/app/pages/services/seo/seo.component.scss
+++ b/src/app/pages/services/seo/seo.component.scss
@@ -1,8 +1,12 @@
 .sv-hero {
-  background-color: #f5f5f5;
-  &::after {
-    background-image: url(../../../../assets/images/website-banner.PNG);
-  }
+  background-image: url(/../../assets/images/about-header-icon-3.svg),
+    url(/../../assets/images/about-header-icon-4.svg),
+    url(/../../assets/images/about-header-icon-1.svg),
+    url(/../../assets/images/about-header-icon-2.svg),
+    linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
+  background-repeat: no-repeat;
+  background-position: 2% 80%, 70% 20%, 95% 57%, 88% 1051%, center center;
+  background-size: 17px, 15px, 30px, auto, 100%;
   h2 {
     color: #ffffff;
     font-size: 65px;
@@ -35,6 +39,10 @@ a.btn.btn-main {
 // *******************work with us*********************
 .website-feature {
   padding: 200px 0 200px 0;
+  background-image: url(/../../assets/images/about-icon-5.svg),
+    url(/../../assets/images/about-icon-6.svg);
+  background-repeat: no-repeat;
+  background-position: 90% 40%, 5% 80%;
   p {
     color: #262332;
     font-size: 20px;
@@ -73,6 +81,11 @@ a.btn.btn-main {
 .benefits {
   background: #f5f5f5;
   padding: 160px 0 150px 0;
+  background-image: url(/../../assets/images/about-icon-5.svg),
+    url(/../../assets/images/about-icon-6.svg),
+    url(/../../assets/images/about-icon-7.svg);
+  background-repeat: no-repeat;
+  background-position: 5% 70%, 95% 20%, 95% 95%;
   .benefits-title {
     h2 {
       color: #172127;
