--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,7 +15,10 @@
             >Lets get started <img src="../../../assets/images/arrow.svg"
           /></a>
           <div class="hero-inner-img">
-            <img src="../../../assets/images/home-banner-icon.svg" alt="icon" />
+            <img
+              src="../../../assets/images/home-banner-icon.jpeg"
+              alt="icon"
+            />
           </div>
         </div>
       </div>
