--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,32 +1,36 @@
 .sv-hero {
-  padding: 4rem;
-  height: 400px !important;
+  padding: 130px 0 59px 0px;
+  height: auto !important;
   display: flex;
   justify-content: center;
   align-items: center;
-  // background-color: #e00d0d;
-  //background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
   background-image: url(/../../assets/images/about-header-icon-3.svg),
     url(/../../assets/images/about-header-icon-4.svg),
     url(/../../assets/images/about-header-icon-1.svg),
     url(/../../assets/images/about-header-icon-2.svg),
     linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
   background-repeat: no-repeat;
-  background-position: 2% 80%, 70% 20%, 95% 57%, 88% 1051%, center center;
+  background-position: 2% 80%, 88% 29%, 95% 57%, 81% 414%, center center;
   background-size: 17px, 15px, 30px, auto, 100%;
   h2 {
     color: #ffffff;
     font-size: 65px;
     font-weight: 900;
     line-height: 79px;
+    margin-bottom: 130px;
   }
 }
 a.btn.btn-main {
   background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
   background-size: 300% 100%;
   border-radius: 5px;
-  padding: 15px 35px;
+  padding: 16px 46px;
+  display: inline-block;
   color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: 24px;
   moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
@@ -44,28 +48,30 @@ a.btn.btn-main {
   background-image: url(/../../assets/images/about-icon-5.svg),
     url(/../../assets/images/about-icon-6.svg);
   background-repeat: no-repeat;
-  background-position: 90% 40%, 5% 80%;
+  background-position: 96% 28%, 5% 69%;
   p {
+    opacity: 0.5;
     color: #262332;
     font-size: 20px;
-    font-weight: 400;
-    line-height: 26px;
+    letter-spacing: 0;
+    line-height: 30px;
     max-width: 400px;
   }
   .tts {
     h2 {
       color: #262332;
       font-size: 24px;
-      font-weight: 400;
       line-height: 32px;
       margin-right: 76px;
       margin-bottom: 0;
+      font-weight: bold;
+      letter-spacing: 0;
     }
     ul {
       list-style-type: none;
       padding: 0;
       li {
-        margin: 0 0 50px 0;
+        margin: 0 0 35px 0;
         display: flex;
         .icons {
           margin-right: 15px;
@@ -73,12 +79,6 @@ a.btn.btn-main {
             width: 30px;
             margin-top: 6px;
           }
-        }
-        p {
-          color: #262332;
-          font-size: 24px;
-          font-weight: 400;
-          line-height: 32px;
         }
       }
     }
@@ -91,10 +91,10 @@ a.btn.btn-main {
   background-color: #f5f5f5;
   background-image: url(/../../assets/images/about-icon-5.svg),
     url(/../../assets/images/about-icon-6.svg),
-    url(/../../assets/images/about-icon-7.svg);
+    url(/../../assets/images/about-icon-8.svg);
   background-repeat: no-repeat;
-  background-position: 5% 70%, 95% 20%, 95% 95%;
-  padding: 100px 0;
+  background-position: 5% 70%, 95% 17%, 95% 95%;
+  padding: 188px 0 165px 0;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -105,6 +105,7 @@ a.btn.btn-main {
     line-height: 60px;
     text-align: center;
     letter-spacing: 1px;
+    margin-bottom: 85px;
   }
   h3 {
     color: #111010;
@@ -115,17 +116,17 @@ a.btn.btn-main {
     margin-top: 20px;
   }
   p {
-    color: #79848b;
+    color: #a3a3a3;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 55px;
   }
 }
 
 .lts {
-  // padding: 180px 0;
+  padding: 180px 0;
   h2 {
     margin-bottom: 60px;
     line-height: 52px;
