--- a/src/styles.scss
+++ b/src/styles.scss
@@ -273,6 +273,8 @@ span.swiper-pagination-bullet {
   a {
     border-radius: 5px;
     border: 2px solid #ffffff;
+    background-size: 300% 100%;
+    background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
     color: #ffffff;
     font-size: 20px;
     font-weight: 700;
@@ -281,22 +283,19 @@ span.swiper-pagination-bullet {
     margin-top: 20px;
     position: relative;
     z-index: 1;
-    transition: 0.4s ease all;
+    moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
     &:hover {
-      background: $primary-gradient;
-      -webkit-background-clip: text !important;
-      -webkit-text-fill-color: transparent;
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        background-color: white;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        z-index: -1;
-      }
+      background-position: 100% 0;
+      moz-transition: all 0.4s ease-in-out;
+      -o-transition: all 0.4s ease-in-out;
+      -webkit-transition: all 0.4s ease-in-out;
+      transition: all 0.4s ease-in-out;
+      text-decoration: none;
+      // -webkit-background-clip: text !important;
+      // -webkit-text-fill-color: transparent;
     }
   }
 }
