--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -59,7 +59,7 @@
               [src]="
                 isHomePage
                   ? '../../assets/images/menu.svg'
-                  : '../../assets/images/white-menu.PNG'
+                  : '../../assets/images/white-menu.svg'
               "
               width="40"
               class="img-fluid c-p close-menu"
