complete mobile service

--- a/src/app/pages/services/mobile-app/mobile-app.component.html
+++ b/src/app/pages/services/mobile-app/mobile-app.component.html
@@ -111,7 +111,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/mobile-benefit-1.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -127,7 +127,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/mobile-benefit-2.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -143,7 +143,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/mobile-benefit-3.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -159,7 +159,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/mobile-benefit-4.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -175,7 +175,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/mobile-benefit-5.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -191,7 +191,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/mobile-benefit-6.svg"
                   class="img-fluid"
                   alt=""
                 />
