--- a/src/app/shared/components/recent-projects/recent-projects.component.html
+++ b/src/app/shared/components/recent-projects/recent-projects.component.html
@@ -1,7 +1,7 @@
 <section class="slide-project">
   <span class="img-bg-1">
-    <img src="../../assets/images/slide-round.svg" class="img-fluid" alt="" />
-    <img src="../../assets/images/circle.svg" class="img-fluid" alt="" />
+    <img src="../../assets/images/about-icon-6.svg" class="img-fluid" alt="" />
+    <img src="../../assets/images/about-icon-5.svg" class="img-fluid" alt="" />
   </span>
   <div class="container">
     <div class="row">
@@ -70,8 +70,11 @@
                         <a
                           href="javascript:void(0)"
                           class="btn btn-main nav__link"
-                          >Read More →</a
-                        >
+                          >Read More &nbsp;
+                          <img
+                            class="slider-icon"
+                            src="../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -104,8 +107,11 @@
                         <a
                           href="javascript:void(0)"
                           class="btn btn-main nav__link"
-                          >Read More →</a
-                        >
+                          >Read More &nbsp;
+                          <img
+                            class="slider-icon"
+                            src="../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -138,8 +144,11 @@
                         <a
                           href="javascript:void(0)"
                           class="btn btn-main nav__link"
-                          >Read More →</a
-                        >
+                          >Read More &nbsp;
+                          <img
+                            class="slider-icon"
+                            src="../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
@@ -172,8 +181,11 @@
                         <a
                           href="javascript:void(0)"
                           class="btn btn-main nav__link"
-                          >Read More →</a
-                        >
+                          >Read More &nbsp;
+                          <img
+                            class="slider-icon"
+                            src="../../assets/images/arrow.svg"
+                        /></a>
                       </div>
                     </div>
                   </div>
